css/style.css
/* ... */
.read-btn {
  margin-bottom: 180px; }

/* About us section ends
===================================*/
/* Prices section 
===================================*/
.prices-section {
  margin-top: -18px;
  background: #334d69; }
  .prices-section h2 {
    padding-bottom: 80px; }

.prices-container {
  margin-bottom: 120px; }
  .prices-container .prices-bar, .prices-container .rental-bar {
    background: #1e2e41;
    height: 30px; }
  .prices-container .prices-circle {
    margin: 0 auto;
    position: relative;
    bottom: 50px;
    width: 80px;
    height: 80px;
    background-color: #faba56;
    background-image: url("../images/ticket1.png");
    background-repeat: no-repeat;
    background-position: 8px 10px;
    border-radius: 40px; }
  .prices-container li {
    text-align: center;
    background: #ebebeb;
    margin-top: 4px; }
  .prices-container .cable-color {
    background: #9fa9b2; }

/* Prices section ends
===================================*/
.camp-btn {
  background: #96d59e;
  text-align: center;
  padding: 15px;
  font-size: 20px;
  font-weight: bold;
  margin-top: -80px;
  margin-bottom: 180px;
  border-radius: 5px; }

/* rentals section
===================================*/
.small-ul {
  font-size: 20px; }

.big-ul {
  font-size: 40px; }

.rental-section {
  background: #3fa6ad;
  margin-top: 120px; }

.main-rental-contain {
  margin-left: 15px;
  margin-right: 15px;
  padding-bottom: 180px; }
  .main-rental-contain h2 {
    text-align: center;
    padding-bottom: 80px; }
  .main-rental-contain .rental-bar {
    background: #1e2e41;
    height: 30px; }
    .main-rental-contain .rental-bar .rental-circle {
      width: 80px;
      height: 80px;
      background: #faba56;
      border-radius: 50px;
      position: relative;
      bottom: 55px;
      margin: 0 auto; }
  .main-rental-contain .rental-prices {
    background: #F1F1F1;
    text-align: center;
    margin-bottom: 4px; }

/* map
===================================*
*/
.map-contain {
  width: 100%; }

.map-section {
  background: #4c4c4c;
  margin-top: -18px;
  padding-bottom: 180px; }
  .map-section a {
    color: white;
    font-size: 20px;
    text-align: center;
    display: block;
    text-decoration: underline; }

.hours-section {
  background: #96d59e;
  margin-top: 120px;
  padding-bottom: 180px; }
  .hours-section h2 {
    text-align: center;
    padding-bottom: 80px; }
  .hours-section .hours-bar {
    background: #1e2e41;
    height: 30px; }
    .hours-section .hours-bar .hours-circle {
      width: 80px;
      height: 80px;
      background: #faba56;
      border-radius: 50px;
      position: relative;
      bottom: 55px;
      margin: 0 auto; }
  .hours-section .hours-prices {
    background: #F1F1F1;
    text-align: center;
    margin-bottom: 4px; }

.top {
  display: none;
  background-color: #fd4950;
  bottom: 2em;
  color: #FFF;
  opacity: 0.8;
  padding: 1.2em;
  position: fixed;
  right: 1.5em;
  text-decoration: none;
  transition-duration: 1s; }

.top:hover {
  opacity: 1;
  transition: 1s;
  text-decoration: none;
  color: #fff; }

/* Footer Styles
===================================*/
footer {
  height: 200px;
  width: 100%;
  background: #283332; }

/* Helpers for top position on internal page links
====================================================*/
#spytop:before,
.all-padding:before {
  display: block;
  content: " ";
  margin-top: -100px;
  min-height: 100px;
  visibility: hidden;
  padding-top: 140px; }

/* jQuery Styles
===================================*/
.navbar-scroll {
  background: white;
  padding: 0;
  transition-duration: 0.6s; }

@media screen and (min-width: 992px) {
  .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
    position: relative;
    min-height: 1px;
    padding-right: 0px;
    padding-left: 0px; }

  .lefty {
    padding-right: 40px; }

  .righty {
    padding-left: 40px; } }
@media screen and (min-width: 1200px) {
  .rental-prices {
    margin-right: .45%;
    width: 33%; }
    .rental-prices:last-of-type {
      margin-right: 0%; } }

/*# sourceMappingURL=style.css.map */

